--- a/lib/src/localization/app_en.arb
+++ b/lib/src/localization/app_en.arb
@@ -9,6 +9,7 @@
   "forgot": "Forgot Password?",
   "noAccount": "Don't have an account? Create an account",
   "register": "Register",
+  "registerSubtitle": "Create your Imali account in seconds",
   "name": "Name",
   "username": "Username",
   "email": "Email Address",
